# auto-attack

./: pyproject.toml
autoattack/: __init__.py  autopgd_base.py  checks.py  fab_base.py  square.py
autoattack/examples/: eval.py  eval_tf1.py  eval_tf2.py
pyautoattack/: __init__.py  autoattack.py  checks.py  fab_pt.py  fab_tf.py
pyautoattack/examples/: eval.py  eval_tf1.py  eval_tf2.py
